--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 </head>
 
 <body>
-
 <!--navbar component-->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
         <img id="logo" src="./assets/images/logo-elixir.png" width="50" height="50" class="d-inline-block align-top" alt="elixir,DTU">
     </a>
@@ -33,8 +32,71 @@
         </ul>
     </div>
 </nav>
-
 <!--navbar component ends-->
+
+<div id="theme"></div>
+
+<!--about US part-->
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <h1 class="col-md-9">What we do.</h1>
+        <p class="col-md-9">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+            a commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non pr
+            oident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <p class="col-md-9">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+            a commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non pr
+            oident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <p class="col-md-9">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+            a commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non pr
+            oident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+
+        <p class="col-md-9">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+            minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+            a commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non pr
+            oident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+    </div>
+    <div id="img-group" class="row justify-content-center">
+        <div class="col-md-3 m-3">
+            <img src="./assets/images/x%20(142).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
+        </div>
+        <div class="col-md-3 m-3">
+            <img src="./assets/images/x%20(141).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
+        </div>
+        <div class="col-md-3 m-3">
+            <img src="./assets/images/x%20(140).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
+        </div>
+        <div class="col-md-3 m-3">
+            <img src="./assets/images/x%20(141).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
+        </div>
+        <div class="col-md-3 m-3">
+            <img src="./assets/images/x%20(140).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
+        </div>
+        <div class="col-md-3 m-3">
+            <img src="./assets/images/x%20(142).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
+        </div>
+    </div>
+
+</div>
+<!--about US part ends here-->
 
 
 
