info-cards made

--- a/index.html
+++ b/index.html
@@ -98,6 +98,101 @@
 </div>
 <!--about US part ends here-->
 
+<div id="still-image"></div>
+<!--who can join us-->
+<div class="container-fluid info-card-group">
+    <div class="row justify-content-center">
+        <div class="col-md-8 mt-5">
+            <h1>who can join our community?</h1>
+        </div>
+
+    </div>
+    <!--information card-->
+    <div class="info-card row justify-content-center">
+        <div class="col-md-8">
+            <span>health enthusiasts and experts</span>
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+                +
+            </button>
+            <div class="collapse" id="collapse1">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--information card ends-->
+
+    <!--information card-->
+    <div class="info-card row justify-content-center">
+        <div class="col-md-8">
+            <span>health enthusiasts and experts</span>
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                +
+            </button>
+            <div class="collapse" id="collapse2">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--information card ends-->
+
+    <!--information card-->
+    <div class="info-card row justify-content-center">
+        <div class="col-md-8">
+            <span>health enthusiasts and experts</span>
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                +
+            </button>
+            <div class="collapse" id="collapse3">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--information card ends-->
+
+    <!--information card-->
+    <div class="info-card row justify-content-center">
+        <div class="col-md-8">
+            <span>health enthusiasts and experts</span>
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
+                +
+            </button>
+            <div class="collapse" id="collapse4">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--information card ends-->
+
+    <!--information card-->
+    <div class="info-card row justify-content-center">
+        <div class="col-md-8">
+            <span>health enthusiasts and experts</span>
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
+                +
+            </button>
+            <div class="collapse" id="collapse5">
+                <div class="card card-body">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--information card ends-->
+
+
+
+
+</div>
+<!--who can join us ends here-->
+
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
