--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.2/lux/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/customStyles.css">
     <title>Elixir | Delhi Technological University</title>
@@ -11,8 +12,8 @@
 
 <body>
 <!--navbar component-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
+<nav id="home" class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#home">
         <img id="logo" src="./assets/images/logo-elixir.png" width="50" height="50" class="d-inline-block align-top" alt="elixir,DTU">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,13 +22,13 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="#home">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#what-we-do">What we do ?</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#who-can-join">Who can join ?</a>
             </li>
         </ul>
     </div>
@@ -37,7 +38,7 @@
 <div id="theme"></div>
 
 <!--about US part-->
-<div class="container mt-5">
+<div class="container mt-5" id="what-we-do">
     <div class="row justify-content-center">
         <h1 class="col-md-9">What we do.</h1>
         <p class="col-md-9">
@@ -100,102 +101,35 @@
 
 <div id="still-image"></div>
 <!--who can join us-->
-<div class="container-fluid info-card-group">
+<div class="container-fluid info-card-group" id="who-can-join">
     <div class="row justify-content-center">
-        <div class="col-md-8 mt-5">
-            <h1>who can join our community?</h1>
-        </div>
-
-    </div>
-    <!--information card-->
-    <div class="info-card row justify-content-center">
-        <div class="col-md-8">
-            <span>health enthusiasts and experts</span>
-            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                +
-            </button>
-            <div class="collapse" id="collapse1">
-                <div class="card card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                </div>
-            </div>
+        <div class="col-md-9 mt-5">
+            <h1>Who can join us?</h1>
         </div>
     </div>
-    <!--information card ends-->
-
-    <!--information card-->
-    <div class="info-card row justify-content-center">
-        <div class="col-md-8">
-            <span>health enthusiasts and experts</span>
-            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                +
-            </button>
-            <div class="collapse" id="collapse2">
-                <div class="card card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                </div>
-            </div>
+    <div class="row justify-content-center">
+        <div class="col-md-9 mt-5">
+            <h3 style="display: inline-block;">Web developers and designers </h3><i class="fas fa-plus fa-3x" style="float: right"></i>
+            <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor i
+                ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor i
+                ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor i</p>
         </div>
     </div>
-    <!--information card ends-->
-
-    <!--information card-->
-    <div class="info-card row justify-content-center">
-        <div class="col-md-8">
-            <span>health enthusiasts and experts</span>
-            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                +
-            </button>
-            <div class="collapse" id="collapse3">
-                <div class="card card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--information card ends-->
-
-    <!--information card-->
-    <div class="info-card row justify-content-center">
-        <div class="col-md-8">
-            <span>health enthusiasts and experts</span>
-            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                +
-            </button>
-            <div class="collapse" id="collapse4">
-                <div class="card card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--information card ends-->
-
-    <!--information card-->
-    <div class="info-card row justify-content-center">
-        <div class="col-md-8">
-            <span>health enthusiasts and experts</span>
-            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
-                +
-            </button>
-            <div class="collapse" id="collapse5">
-                <div class="card card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--information card ends-->
-
-
-
-
 </div>
 <!--who can join us ends here-->
 
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="./assets/js/customjs.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
