--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
             <h1>Who can join us?</h1>
         </div>
     </div>
+    <!--info card here---->
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;">Web developers and designers </h3><i class="fas fa-plus fa-3x" style="float: right"></i>
+            <h3 style="display: inline-block;">Web developers and designers </h3>
             <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
@@ -123,6 +124,79 @@
                 a commodo consequat. Duis aute irure dolor i</p>
         </div>
     </div>
+    <!--info card ends here---->
+
+    <div class="row justify-content-center">
+        <div class="col-md-9 mt-5">
+            <h3 style="display: inline-block;">Graphic designers</h3>
+            <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor i
+                ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor i
+                ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor i</p>
+        </div>
+    </div>
+    <!--info card ends here---->
+
+    <div class="row justify-content-center">
+        <div class="col-md-9 mt-5">
+            <h3 style="display: inline-block;">Content Writers</h3>
+            <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor i
+                ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor i
+                ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor i</p>
+        </div>
+    </div>
+    <!--info card ends here---->
+
+    <div class="row justify-content-center">
+        <div class="col-md-9 mt-5">
+            <h3 style="display: inline-block;">Corporate Managers</h3>
+            <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor i
+                ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor i
+                ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor i</p>
+        </div>
+    </div>
+    <!--info card ends here---->
+
+    <div class="row justify-content-center">
+        <div class="col-md-9 mt-5">
+            <h3 style="display: inline-block;">Health and fitness instructors</h3>
+            <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor i
+                ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor i
+                ncididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+                a commodo consequat. Duis aute irure dolor i</p>
+        </div>
+    </div>
+    <!--info card ends here---->
 </div>
 <!--who can join us ends here-->
 
