added footer and connectUs

--- a/index.html
+++ b/index.html
@@ -197,9 +197,55 @@
         </div>
     </div>
     <!--info card ends here---->
+
+    <!--join here button--->
+    <div class="row justify-content-center">
+        <div class="col-md-6 mt-5">
+            <h3 style="display: inline-block;">Interested in joining Us?</h3>
+            <button class="btn btn-danger">APPLY !</button>
+        </div>
+
+    </div>
+    <!--join here button end--->
+
 </div>
 <!--who can join us ends here-->
 
+<!--blog link and latest post-->
+<div class="container-fluid mt-3" id="blog">
+    <div class="row justify-content-center">
+    <div class="col-md-9 mt-5">
+        <h3 style="display: inline-block;">Love to read? Have a look at our medium blog!!</h3>
+    </div>
+    </div>
+</div>
+<!--blog link and latest post ends-->
+
+<!--connect with us-->
+<div class="container-fluid" id="connect">
+    <div class="row justify-content-center">
+        <div class="col-md-3 mt-5">
+            <h3 style="display: inline-block;">Let's connect !!</h3>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-md-6 mt-3">
+            <a href="#"><img class="img-fluid" src="./assets/social_media/fb.png"></a>
+            <a href="#"><img class="img-fluid" src="./assets/social_media/medium.png"></a>
+            <a href="#"><img class="img-fluid" src="./assets/social_media/gmail.png"></a>
+            <a href="#"><img class="img-fluid" src="./assets/social_media/insta.png"></a>
+            <a href="#"><img class="img-fluid" src="./assets/social_media/twitter.png"></a>
+            <a href="#"><img class="img-fluid" src="./assets/social_media/youtube.png"></a>
+        </div>
+    </div>
+</div>
+<!--connect with us ends here-->
+
+<!--footer-->
+<div class="container-fluid" id="footer">
+
+</div>
+<!--footer ends-->
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
