--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="#who-can-join">Who can join ?</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#blog">Our Blog</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#connect">Connect</a>
+            </li>
         </ul>
     </div>
 </nav>
