added smooth scroll

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.2/lux/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/customStyles.css">
+    <link rel="icon" href="./assets/images/favicon.png">
     <title>Elixir | Delhi Technological University</title>
 </head>
 
@@ -25,16 +26,16 @@
                 <a class="nav-link" href="#home">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#what-we-do">What we do ?</a>
+                <a class="nav-link" id="link1" href="#what-we-do">What we do ?</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#who-can-join">Who can join ?</a>
+                <a class="nav-link" id="link2" href="#who-can-join">Who can join ?</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#blog">Our Blog</a>
+                <a class="nav-link" id="link3" href="#blog">Our Blog</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#connect">Connect</a>
+                <a class="nav-link" id="link4" href="#connect">Connect</a>
             </li>
         </ul>
     </div>
@@ -254,7 +255,7 @@
 <!--footer ends-->
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="./assets/js/customjs.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
