--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.2/lux/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/customStyles.css">
     <link rel="icon" href="./assets/images/favicon.png">
@@ -47,33 +48,29 @@
 <!--about US part-->
 <div class="container mt-5" id="what-we-do">
     <div class="row justify-content-center">
-        <h1 class="col-md-9">What we do.</h1>
-        <p class="col-md-9">
+        <h1 class="col-md-9" data-aos="slide-left" data-aos-duration="900">What we do.</h1>
+        <p class="col-md-9" data-aos="slide-left" data-aos-duration="900">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
             minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
             a commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
             esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non pr
             oident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <p class="col-md-9">
+            <br>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
             minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
             a commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
             esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non pr
             oident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <p class="col-md-9">
+            <br>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
             minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
             a commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
             esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non pr
             oident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-        <p class="col-md-9">
+            <br>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
             minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
@@ -83,22 +80,22 @@
         </p>
     </div>
     <div id="img-group" class="row justify-content-center">
-        <div class="col-md-3 m-3">
+        <div class="col-md-3 m-3" data-aos="flip-left" data-aos-duration="600">
             <img src="./assets/images/x%20(142).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3">
+        <div class="col-md-3 m-3" data-aos="flip-right" data-aos-duration="600">
             <img src="./assets/images/x%20(141).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3">
+        <div class="col-md-3 m-3" data-aos="flip-down" data-aos-duration="600">
             <img src="./assets/images/x%20(140).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3">
+        <div class="col-md-3 m-3" data-aos="flip-right" data-aos-duration="600">
             <img src="./assets/images/x%20(141).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3">
+        <div class="col-md-3 m-3" data-aos="flip-left" data-aos-duration="600">
             <img src="./assets/images/x%20(140).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
-        <div class="col-md-3 m-3">
+        <div class="col-md-3 m-3" data-aos="flip-up" data-aos-duration="600">
             <img src="./assets/images/x%20(142).jpg" height="300px" width="300px" class="img-fluid" alt="Responsive image">
         </div>
     </div>
@@ -117,8 +114,8 @@
     <!--info card here---->
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;">Web developers and designers </h3>
-            <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <h3 style="display: inline-block;" data-aos="slide-left" data-aos-duration="600">Web developers and designers </h3>
+            <p data-aos="zoom-in" data-aos-duration="1000" >ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -135,8 +132,8 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;">Graphic designers</h3>
-            <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600">Graphic designers</h3>
+            <p data-aos="zoom-in" data-aos-duration="1000">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -153,8 +150,8 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;">Content Writers</h3>
-            <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600">Content Writers</h3>
+            <p data-aos="zoom-in" data-aos-duration="1000">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -171,8 +168,8 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;">Corporate Managers</h3>
-            <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600">Corporate Managers</h3>
+            <p data-aos="zoom-in" data-aos-duration="1000">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -189,8 +186,8 @@
 
     <div class="row justify-content-center">
         <div class="col-md-9 mt-5">
-            <h3 style="display: inline-block;">Health and fitness instructors</h3>
-            <p>ncididunt ut labore et dolore magna aliqua. Ut enim ad
+            <h3 style="display: inline-block;"  data-aos="slide-left" data-aos-duration="600">Health and fitness instructors</h3>
+            <p data-aos="zoom-in" data-aos-duration="1000">ncididunt ut labore et dolore magna aliqua. Ut enim ad
                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
                 a commodo consequat. Duis aute irure dolor i
                 ncididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -207,7 +204,7 @@
 
     <!--join here button--->
     <div class="row justify-content-center">
-        <div class="col-md-6 mt-5">
+        <div class="col-md-6 mt-5" data-aos="slide-up" data-aos-duration="500">
             <h3 style="display: inline-block;">Interested in joining Us?</h3>
             <button class="btn btn-danger">APPLY !</button>
         </div>
@@ -236,7 +233,7 @@
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-md-6 mt-3">
+        <div class="col-md-8 mt-3">
             <a href="#"><img class="img-fluid" src="./assets/social_media/fb.png"></a>
             <a href="#"><img class="img-fluid" src="./assets/social_media/medium.png"></a>
             <a href="#"><img class="img-fluid" src="./assets/social_media/gmail.png"></a>
@@ -256,6 +253,13 @@
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init({
+        once:true,
+        offset:70,
+    });
+</script>
 <script src="./assets/js/customjs.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
