--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <!--about US part-->
 <div class="container mt-5" id="what-we-do">
     <div class="row justify-content-center">
-        <h1 class="col-md-9" data-aos="slide-left" data-aos-duration="900">What we do.</h1>
+        <h1 class="col-md-9" data-aos="slide-left" data-aos-duration="600">What we do.</h1>
         <p class="col-md-9" data-aos="slide-left" data-aos-duration="900">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -228,12 +228,12 @@
 <!--connect with us-->
 <div class="container-fluid" id="connect">
     <div class="row justify-content-center">
-        <div class="col-md-3 mt-5">
+        <div class="col-md-3 mt-5" data-aos="slide-left" data-aos-duration="800">
             <h3 style="display: inline-block;">Let's connect !!</h3>
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-md-8 mt-3">
+        <div class="col-md-7 mt-3" data-aos="zoom-in-right" data-aos-duration="1000">
             <a href="#"><img class="img-fluid" src="./assets/social_media/fb.png"></a>
             <a href="#"><img class="img-fluid" src="./assets/social_media/medium.png"></a>
             <a href="#"><img class="img-fluid" src="./assets/social_media/gmail.png"></a>
