--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 <!--navbar component-->
-<nav id="home" class="navbar navbar-expand-lg navbar-light bg-light">
+<nav id="home" class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
     <a class="navbar-brand" href="#home">
         <img id="logo" src="./assets/images/logo-elixir.png" width="50" height="50" class="d-inline-block align-top" alt="elixir,DTU">
     </a>
@@ -233,7 +233,7 @@
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-md-7 mt-3" data-aos="zoom-in-right" data-aos-duration="1000">
+        <div class="col-md-6 mt-3" data-aos="zoom-in-right" data-aos-duration="1000">
             <a href="#"><img class="img-fluid" src="./assets/social_media/fb.png"></a>
             <a href="#"><img class="img-fluid" src="./assets/social_media/medium.png"></a>
             <a href="#"><img class="img-fluid" src="./assets/social_media/gmail.png"></a>
